[Client] MultiDrag: Enabled selection for collapsed sideboard and correctly handle multidrag

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1685,3 +1685,14 @@ See: https://stackoverflow.com/questions/52937708/why-does-applying-a-css-filter
 	transition: transform 1s linear;
 	transform: rotate(calc(-360deg * min(var(--timer-max), var(--timer-current)) / var(--timer-max)));
 }
+
+.multi-drag-selected::before {
+	content: "";
+	position: absolute;
+	top: -3px;
+	left: -3px;
+	right: -3px;
+	bottom: -3px;
+	border-radius: 3.5%/28% 28% 3px 3px;
+	background-color: #518ae6;
+}
